# open-dicom-workstation

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
src/odw/: __init__.py  app.py
src/odw/core/: __init__.py  config.py  imaging.py  measure.py  models.py  presets.py  storage.py  transfer.py
src/odw/core/net/: __init__.py  query.py  retrieve.py  scp.py
src/odw/ui/: __init__.py  main_window.py  query_dialog.py  scp_bridge.py  settings_dialog.py  shortcuts_dialog.py  study_browser.py  viewer.py  workers.py
src/odw/ui/i18n/: odw_de.ts
tests/: conftest.py
tests/integration/: test_orthanc.py
tests/support/: factory.py  mock_pacs.py
tests/ui/: conftest.py  test_main_window.py  test_query_dialog.py  test_study_browser.py  test_viewer.py  test_workers.py
tests/unit/: test_config.py  test_core_is_qt_free.py  test_factory.py  test_i18n.py  test_imaging.py  test_measure.py  test_presets.py  test_query_scu.py  test_retrieve_get.py  test_retrieve_move.py  test_storage.py  test_storage_scp.py  test_transfer.py  test_version.py
