[project]
name = "odw"
version = "0.1.0"
description = "Open DICOM Workstation — a DICOM viewer by radiologists, for radiologists"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydicom>=3.0.2",
    "pynetdicom>=3.0.4",
    "numpy>=1.26",
    "PySide6>=6.8",
    "platformdirs>=4",
    "tomli-w>=1",
    "pylibjpeg[libjpeg,openjpeg,rle]>=2.0",
    "pyjpegls>=1.5.1",
]

[project.urls]
Repository = "https://github.com/braegel/open-dicom-workstation"

[project.scripts]
odw = "odw.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-qt>=4.5",
    "pytest-cov>=5",
    "ruff>=0.15",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
qt_api = "pyside6"
markers = [
    "integration: requires a running Orthanc test PACS (set ODW_ORTHANC_HOST)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["odw"]

[[tool.mypy.overrides]]
module = "odw.ui.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "pynetdicom.*"
ignore_missing_imports = true
follow_untyped_imports = true
